--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,8 @@
         android:layout_height="match_parent"
         android:id="@+id/wv"
         />
+    <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              />
 </android.support.constraint.ConstraintLayout>
