--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -22,5 +23,6 @@
     <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              />
+                android:id="@+id/decor_content_parent"
+        tools:ignore="MissingConstraints" />
 </android.support.constraint.ConstraintLayout>
